--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "macaddress": "^0.2.9",
     "node-macaddress": "^0.2.4",
     "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
